# LerksyLib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
Tests/: CMakeLists.txt  main.cpp  test_Color.cpp
include/: Buffer  Color  ColorT
src/: Buffer.cpp  Buffer.h  Color.h  ColorT.h  NumberUtils.h
